src/test/ui/generic-associated-types/bugs/issue-88382.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-88382.rs:28:40
   |
LL |     do_something(SomeImplementation(), test);
   |                                        ^^^^ cannot infer type of the type parameter `I` declared on the function `test`
   |
help: consider specifying the generic argument
   |
LL |     do_something(SomeImplementation(), test::<I>);
   |                                            +++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
